<resources>
    <string name="app_name">MobileApps_CW3</string>
    <string name="email">Email Address</string>
    <string name="loginPrompt">Please login with your information</string>
    <string name="loginWelcome">Welcome</string>
    <string name="password">Password</string>
    <string name="remember">Remember me</string>
    <string name="forgotPassword">Forgot my password</string>
    <string name="login">Login</string>
    <string name="loginAlternative">Or</string>
    <string name="title">Restaurant Reviewer</string>
    <string name="register">Register</string>
    <string name="guest">Continue As Guest</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="filter">Filter Button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment">Payment</string>
    <string name="reviews">Reviews</string>
    <string name="points">Points</string>
    <string name="notifications">Notifications</string>
    <string name="info_followers">Total Followers:</string>
    <string name="total_reviews">Total Reviews:</string>
    <string name="username">Guest Account</string>
    <string name="lblUsername">Username:</string>
    <string name="change">Change</string>
    <string name="lblPassword">Password:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="guest_account">Guest Account</string>
    <string name="switch_night">Night Mode</string>
    <string name="anonymous_mode">Anonymous Mode</string>
    <string name="security_amp_privacy"><![CDATA[Security & Privacy]]></string>
    <string name="test_size">Test Size</string>
    <string name="language">Language</string>
    <string name="contact_us">Contact Us</string>
    <string name="help_amp_information"><![CDATA[Help & Information]]></string>
    <string name="logout">Logout</string>
    <string name="meals_from">Meals from £</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="menu">Menu</string>
    <string name="children_allowed">Children Allowed:</string>
    <string name="location">Location:</string>
    <string name="restaurant_example">Restaurant Example</string>
    <string name="swansea_wales">Swansea, Wales</string>
    <string name="yes">Yes</string>
    <string name="_0">0</string>
    <string name="example">Example Name</string>
    <string name="review_title_example">Review posted 2 days ago</string>
    <string name="review_desc_example">Burger King\'s flame-grilled burgers deliver a satisfying taste, with a menu offering diverse and wallet-friendly options. Fast and efficient service makes it a reliable choice for a quick and flavorful meal on the go, despite a simple ambiance.</string>
    <string name="amazing">Amazing!</string>
    <string name="leave_a_review">LEAVE A REVIEW</string>
    <string name="overall_rating">Overall rating</string>
    <string name="headline">Add a headline</string>
    <string name="photo">Add a photo</string>
    <string name="written_review">Add a written review</string>
    <string name="submit_review">Submit Review</string>
    <string name="monday">Monday:</string>
    <string name="tuesday">Tuesday:</string>
    <string name="wednesday">Wednesday:</string>
    <string name="friday">Friday:</string>
    <string name="thursday">Thursday:</string>
    <string name="saturday">Saturday:</string>
    <string name="example_time">8am - 6pm</string>
    <string name="sunday">Sunday:</string>
    <string name="go_back">Go back</string>
    <string name="unavailable">Unavailable</string>
    <string name="tag_a_location">Tag a location</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="go_to_profile">Go To Profile</string>
    <string name="follow">Follow</string>
    <string name="total_upvotes">Total Upvotes</string>
    <string name="report_user">Report User</string>
    <string name="comment">Comment</string>
    <string name="comment_example">I totally agree with you!</string>
    <string name="comment_example_date">Comment posted an hour ago</string>
    <string name="confirm_edit">Confirm Edit</string>
    <string name="description">Description</string>
    <string name="ttl_location">Location</string>
    <string name="ttl_photo">Photo</string>
    <string name="ttl_title">Title</string>
    <string name="ttl_rating">Rating</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="add_photo">Add Photo</string>
    <string name="badges">Badges</string>
    <string name="following">Following</string>
    <string name="share">Share</string>
    <string name="reply">Reply</string>
    <string name="go_to_restaurant">Go To Restaurant</string>
    <string name="write_25_reviews">Write 25 Reviews</string>
    <string name="unlock_all_badges">Unlock All Badges</string>
    <string name="get_100_followers">Get 100 Followers</string>
    <string name="receive_100_likes">Receive 100 Likes</string>
    <string name="total_likes">Total Likes</string>
    <string name="tag_location">Tag Location</string>
    <string name="name">Name</string>
    <string name="cost">Cost</string>
    <string name="likes">Likes</string>
    <string name="date">Date</string>
    <string name="dislikes">Dislikes</string>
    <string name="_4_99">$4.99</string>
    <string name="login_username">Username</string>
    <string name="register_prompt">Please Enter Your Wanted Details</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="empty_bio">Empty Bio</string>
    <string name="this_profile_does_not_have_a_bio">This profile does not have a bio.</string>
</resources>