<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingTop="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    >

    <ImageView
        android:id="@+id/back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/baseline_arrow_back_ios_new_24">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ttl_rating"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp">

    </TextView>

    <RatingBar
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:id="@+id/ratingBar"
        android:transformPivotX="0dp"
        android:transformPivotY="10dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:numStars="5"
        android:stepSize="0.5"
        android:progressTint="@color/primary"
        android:rating="3"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ttl_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="1dp">

    </TextView>

    <EditText
        android:id="@+id/txtTitle"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:inputType="textEmailAddress"
        android:background="@drawable/no_underline"
        android:padding="4dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ttl_photo"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp">
    </TextView>

    <ImageButton
        android:id="@+id/reviewPhoto"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitXY"
        android:background="@drawable/add_photo">
    </ImageButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ttl_location"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/txtTagged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            >
        </TextView>

        <ImageView
            android:id="@+id/btnLocation"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/icon_location_primary">
        </ImageView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        >

    </TextView>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="120dp"
        android:gravity="start|top"
        android:textSize="15sp"
        android:inputType="textMultiLine"
        android:background="@drawable/no_underline"
        android:padding="6dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirmEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/confirm_edit"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:cornerRadius="32dp"/>

</LinearLayout>
