<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reviewInstance"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    >

    <LinearLayout
        android:id="@+id/commentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/circularOutline"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/background_circle_white">

            <ImageView
                android:id="@+id/commentPicture"
                android:layout_width="42dp"
                android:layout_height="42dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img_profile" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/commentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="3dp"
                android:text="@string/example"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/commentDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:text="@string/comment_example_date"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="30dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="end">

            <ImageView
                android:id="@+id/manageComment"
                android:layout_width="30dp"
                android:layout_height="70dp"
                app:layout_constraintEnd_toEndOf="@id/commentLayout"
                app:srcCompat="@drawable/baseline_drag_indicator_24"
                tools:ignore="MissingConstraints,NotSibling" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/commentDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="7dp"
        android:text="@string/comment_example"
        />

    <LinearLayout
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="3dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btnReply"
            android:layout_width="28dp"
            android:layout_gravity="center"
            android:layout_height="28dp"
            android:src="@drawable/icon_reply" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="3dp"
            android:text="@string/reply"
            />
    </LinearLayout>

</LinearLayout>